Portfolio done with minor updated left

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <div class="services">
             <div class="service">
                 <h3>Front-End development</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius doloribus nobis quisquam ea eum, ducimus architecto tenetur nihil dolore placeat amet dolor consectetur aliquid harum porro. Eum ipsum harum est?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius doloribus nobis quisquam ea eum, ducimus architecto tehkhuj.</p>
             </div>
 
             <div class="service">
                 <h3>Back-End Integration</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia architecto quasi quisquam quos quidem nobis aliquam nesciunt optio. Nam adipisci delectus ad facilis inventore alias eveniet obcaecati libero reiciendis ut.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia architecto quasi quisquam quos quidem nobis aliquam nesciun.</p>
             </div>
 
             <div class="service">
                 <h3>Block-chain Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eius obcaecati reiciendis at doloremque. Nam, placeat hic vel, nemo optio provident rerum exercitationem sit fugit nisi quo, minima consequuntur iure.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eius obcaecati reiciendis at doloremque.</p>
             </div>
         </div>
 
